GH-6375: Harmonize package structures
Fixes: https://github.com/spring-projects/spring-integration/issues/6375

* Move respective classes to the `inbound`, `outbound` or `support` packages
to make the whole picture for the API more concise and clean

The firs commit is for `stream` module

* Fix `stream.adoc` for new `inbound/outbound` packages

* Hormonize packages for FTP & SFTP modules

* Hormonize packages for WS module

* Improve `ws.adoc` to avoid `foo`, `bar` etc.

* Harmonize packages in `mail` module

* Move inbound channel adapters into a new `inbound` package
* Move outbound channel adapters into a new `outbound` package
* Preserve existing classes in the root package as deprecated
and as extensions of new classes

* Harmonize packages in `jmx` module

* Move inbound channel adapters into a new `inbound` package
* Move outbound channel adapters into a new `outbound` package
* Preserve existing classes in the root package as deprecated
and as extensions of new classes
* Some tests refactoring according to modern AssertJ API
* Fix typos in `jmx.adoc`

* Harmonize packages in `file` module

* Move inbound channel adapters into a new `inbound` package
* Move outbound channel adapters into a new `outbound` package
* Preserve existing classes in the root package as deprecated
and as extensions of new classes
* Some tests refactoring (affected files) according to modern AssertJ API

* Harmonize packages in `jms` module

* Move inbound channel adapters into a new `inbound` package
* Move outbound channel adapters into a new `outbound` package
* Move channels into a new `channel` package
* Preserve existing classes in the root package as deprecated
and as extensions of new classes
* Some tests refactoring (affected files) according to modern AssertJ API
* Use now a new in SF `SimpleDestinationResolver` for optimization with caching

* Fix XSDs for proper class packages

* Move JDBC components to new `inbound` or `outbound` packages, respectively

* Revise affected